--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <div class="name">K. Karunanithi</div>
                 <div class="position">Managing Director</div>
                 <div class="description">
-                    Providing expert EV battery services, maintenance, and solutions for sustainable transportation.
+                    Providing expert EV battery services, maintenance and solutions for sustainable transportation.
                 </div>
             </div>
             
@@ -446,3 +446,4 @@ END:VCARD`;
     </script>
 </body>
 </html>
+
