--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>K. Karunanithi | Think Beyond Horizon</title>
+    <title>K. Karunanithi | Think Beyond HorizoN</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -690,3 +690,4 @@ _Shared via Digital Card • ${currentTime}_
     </script>
 </body>
 </html>
+
